[metadata]
name = example_module
version = 1.0.0
description = Samples of codes for geospatial analysis
long_description = file: README.md, CHANGELOG.md, LICENSE
url = https://github.com/johnnv1/geospatial_examples/
author = João Gustavo Atkinson Amorim
author_email = joao.atkinson@posgrad.ufsc.br
license_file = LICENSE
python_requires = =3.10
; keywords = one, two
; license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent  
    
[options]
zip_safe = False
include_package_data = True
packages = find:
; scripts =
;     bin/first.py
;     bin/second.py
install_requires =
    loguru

; [options.package_data]
; * = *.txt, *.rst
; hello = *.msg

; [options.entry_points]
; console_scripts =
;     executable-name = package.module:function

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    tests*